<resources>
    <string name="app_name">Decida a História</string>

    <!--  Genres   -->
    <string name="genre_action">Ação</string>
    <string name="genre_adventure">Aventura</string>
    <string name="genre_comedy">Comédia</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_fantasy">Fantasia</string>
    <string name="genre_horror">Terror</string>
    <string name="genre_isekai">Isekai</string>
    <string name="genre_mistery">Mistério</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Ficção Científica</string>
    <string name="genre_other">Outro</string>

    <!--  Messages   -->
    <string name="fetching_data_from_server">buscando dados...</string>

    <!--  Layout Text   -->
    <string name="play">JOGAR</string>
    <string name="create">CRIAR</string>
    <string name="description">DESCRIÇÃO</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
