<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoryDetailsActivity"
    android:background="@color/white_background"
    android:orientation="vertical"
    android:padding="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/page_background"
        android:padding="10dp"
        >
        <EditText
            android:id="@+id/story_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_second"
            android:text="@string/fetching_data_from_server"
            android:textColor="#fff"
            android:gravity="center"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/story_genre_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fetching_data_from_server"
            android:textColor="#000"
            android:textSize="25sp"
            android:padding="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_second"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/description"
            android:textColor="#fff"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/water_background2"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            >

            <EditText
                android:id="@+id/story_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fetching_data_from_server"
                android:textSize="16sp"
                android:textColor="#000"
                />
        </ScrollView>

        <Button
            android:id="@+id/playCreate_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_primary"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/play"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>