<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/water_background"
    android:padding="10dp"
    tools:context=".StoriesActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white_background"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Escolha Uma História"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/titles"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Histórias são divididas em categorias e, depois de um certo tempo, história antigas ou histórias consideradas ruins são trocadas."
            android:textColor="#000"
            android:textSize="16dp"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:background="@color/white_background"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/water_background"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Categoria"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/titles"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Título"
                    android:gravity="right"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/titles"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_action"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/action_genre_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching_data_from_server"
                    android:gravity="right"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_adventure"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/adventure_genre_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching_data_from_server"
                    android:gravity="right"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_comedy"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/comedy_genre_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching_data_from_server"
                    android:gravity="right"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_drama"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/drama_genre_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching_data_from_server"
                    android:gravity="right"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_fantasy"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/fantasy_genre_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching_data_from_server"
                    android:gravity="right"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_horror"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/horror_genre_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching_data_from_server"
                    android:gravity="right"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_isekai"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/isekai_genre_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching_data_from_server"
                    android:gravity="right"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_mistery"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/mistery_genre_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching_data_from_server"
                    android:gravity="right"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_romance"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/romance_genre_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching_data_from_server"
                    android:gravity="right"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_science_fiction"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/science_fiction_genre_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching_data_from_server"
                    android:gravity="right"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre_other"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/other_genre_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching_data_from_server"
                    android:gravity="right"
                    android:textColor="#000"
                    android:textSize="16sp"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>